--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
         <div class="col-md-12 text-center ">
           <ul class="list-inline social-links">
             <li>
-              <a href="https://github.com/AmanM13" class="btn-social btn-outline" data-toggle="tooltip" data-placement="top" title="Github">
+              <a href="https://github.com/AmanM13" target="_blank" class="btn-social btn-outline" data-toggle="tooltip" data-placement="top" title="Github">
                 <i class="fab fa-github"></i>
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/aman_manapure?s=09" class="btn-social btn-outline" title="Twitter">
+              <a href="https://twitter.com/aman_manapure?s=09" target="_blank"  class="btn-social btn-outline" title="Twitter">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/amanmanapure" class="btn-social btn-outline" title="LinkedIn">
+              <a href="https://www.linkedin.com/in/amanmanapure" target="_blank" class="btn-social btn-outline" title="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.facebook.com/aman.manapure.397" class="btn-social btn-outline" title="Facebook">
+              <a href="https://www.facebook.com/aman.manapure.397" target="_blank" class="btn-social btn-outline" title="Facebook">
                 <i class="fab fa-facebook"></i>
               </a>
             </li>
