--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </h1>
       <p>
         A curious learner | Cloud and DevOps | Open Source Enthusiast | Contributor
-        <a href="https://github.com/fedora-infra">@fedora</a>
+        <a href="https://github.com/fedora-infra"> target="_blank" @fedora</a>
       </p>
       <div class="box">
         <a class="btn blue" href="/assets/resume/Aman_manapure_resume.pdf">
