--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="https://github.com/fedora-infra" target="_blank"> @fedora </a>
       </p>
       <div class="box">
-        <a class="btn blue" href="/assets/resume/Aman_manapure_resume.pdf">
+        <a class="btn blue" href="/assets/resume/Aman_manapure_resume.pdf" target="_blank">
           <span>Resume</span>
         </a>
       </div>
