--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <h1>Aman Manapure
       </h1>
       <p>
-        A curious learner | Cloud and DevOps | Open Source Enthusiast | Contributor
-        <a href="https://github.com/fedora-infra" target="_blank"> @fedora </a>
+        A curious learner | Open Source Enthusiast | Cloud and DevSecOps | Contributor
+        <a href="https://twitter.com/fedora?s=20&t=4ozGkOA_enbwCQeb2M2-DA" target="_blank"> @fedora </a>
       </p>
-      <div class="box">
+      <!-- <div class="box">
         <a class="btn blue" href="/assets/resume/Aman_manapure_resume.pdf" target="_blank">
           <span>Resume</span>
         </a>
-      </div>
+      </div> -->
     </div>
     <div class="footer-box"></div>
   </div>
@@ -67,11 +67,11 @@
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a href="https://www.facebook.com/aman.manapure.397" target="_blank" class="btn-social btn-outline" title="Facebook">
                 <i class="fab fa-facebook"></i>
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
